# power-calculator

./: .dockerignore  .gitignore  .tool-versions  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
power_calculator/: __init__.py  binary_power.py  cli.py  duration.py
power_calculator/core/: allocation.py  base.py  binary.py  models.py  stats.py  types.py
tests/: test_binary_power.py  test_cli.py  test_core_base.py  test_core_binary.py  test_core_models.py  test_duration.py  test_package_exports.py
