[tool.poetry]
name = "power-calculator"
version = "0.1.1"
description = "Power analysis and sample size calculator for A/B(/n) tests with binary metrics."
authors = ["uduwage"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/uduwage/power-calculator"
repository = "https://github.com/uduwage/power-calculator"
keywords = ["ab-test", "power-analysis", "statistics", "experiment", "sample-size"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics"
]

packages = [
    { include = "power_calculator" }
]

[tool.poetry.scripts]
power-calculator = "power_calculator.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
coverage = { version = "^7.0.0", extras = ["toml"] }
black = "^24.8.0"
ruff = "^0.6.9"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # import sorting
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "C4",  # comprehensions
    "A",   # builtins shadowing
    "S",   # security checks
    "C90", # mccabe complexity
    "D",   # docstring rules
]
ignore = [
    "A003", # allow attributes shadowing builtins when intentional
    "D203", # conflicts with D211
    "D213", # conflicts with D212
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S101"]

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
files = ["power_calculator"]
